--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ aws-sdk-dynamodb = "0.14.0"
 aws-sdk-s3 = "0.14.0"
 aws-smithy-http = "0.44.0"
 aws-types = "0.14.0"
+scylla = "0.8.1"
 axum = "0.6.2"
 bcs = "0.1.3"
 bincode = "1.3.3"
