--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -11,12 +11,13 @@ license = "Apache-2.0"
 edition = "2021"
 
 [package.metadata.docs.rs]
-features = ["rocksdb", "aws", "test"]
+features = ["scylladb", "rocksdb", "aws", "test"]
 targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [features]
 test = ["anyhow", "tokio/macros", "tokio/parking_lot"]
 aws = ["aws-config", "aws-sdk-dynamodb", "aws-sdk-s3", "aws-smithy-http", "aws-types"]
+scylladb = ["scylla"]
 db_timings = []
 metrics = ["dep:hex", "dep:metrics"]
 
@@ -43,6 +44,7 @@ anyhow = { workspace = true, optional = true }
 tracing = { workspace = true }
 http = { workspace = true }
 rand = { workspace = true }
+scylla = { workspace = true, optional = true }
 rocksdb = { workspace = true, optional = true }
 aws-config = { workspace = true, optional = true }
 aws-sdk-dynamodb = { workspace = true, optional = true }
