Create initial `linera-witty` crate
Populate it with a manifest file, and some initial documentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
         "linera-storage",
         "linera-views",
         "linera-views-derive",
+        "linera-witty",
 ]
 exclude = [
         "examples",
