--- a/linera-explorer/Cargo.toml
+++ b/linera-explorer/Cargo.toml
@@ -13,14 +13,14 @@ license = "Apache-2.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-url = "^2.4"
-wasm-bindgen = "^0.2"
-serde-wasm-bindgen = "^0.5"
-wasm-bindgen-futures = "^0.4"
-web-sys = { version = "^0.3", features = [ "console", "Window", "History", "Storage", "Location" ] }
-js-sys = "^0.3"
-console_error_panic_hook = "^0.1"
-graphql_client = { version = "^0.13", features = [ "reqwest" ] }
+url = "2.4"
+wasm-bindgen = "0.2"
+serde-wasm-bindgen = "0.5"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = [ "console", "Window", "History", "Storage", "Location" ] }
+js-sys = "0.3"
+console_error_panic_hook = "0.1"
+graphql_client = { version = "0.13", features = [ "reqwest" ] }
 serde = { workspace = true, features = [ "derive" ] }
 serde_json = { workspace = true }
 hex = { workspace = true }
