Implement deriving of `WitType` for structs
Calculate the size of the type by adding up all the sizes of the fields,
with any necessary padding for aligment, and define the layout type by
concatenating all of the field layouts.

--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -12,3 +12,9 @@ edition = "2021"
 
 [lib]
 proc-macro = true
+
+[dependencies]
+proc-macro-error = { workspace = true }
+proc-macro2 = { workspace = true }
+quote = { workspace = true }
+syn = { workspace = true }
