Stub a common `RuntimeError` type
An error to abstract away runtime-specific error types and also some
common shared failure scenarios.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -17,6 +17,7 @@ macros = ["linera-witty-macros"]
 [dependencies]
 frunk = { workspace = true }
 linera-witty-macros = { workspace = true, optional = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
 linera-witty = { workspace = true, features = ["macros"] }
