--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -17,3 +17,6 @@ macros = ["linera-witty-macros"]
 [dependencies]
 frunk = { workspace = true }
 linera-witty-macros = { workspace = true, optional = true }
+
+[dev-dependencies]
+linera-witty = { workspace = true, features = ["macros"] }
