--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -77,6 +77,9 @@ BlockProposal:
     - blobs:
         SEQ:
           TYPENAME: CertificateValue
+    - validated:
+        OPTION:
+          TYPENAME: Certificate
 Bytecode:
   STRUCT:
     - bytes: BYTES
