--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,6 +118,7 @@ linera-views = { version = "0.2.0", path = "./linera-views", default-features = 
 linera-views-derive = { version = "0.2.0", path = "./linera-views-derive" }
 linera-witty = { version = "0.2.0", path = "./linera-witty" }
 linera-witty-macros = { version = "0.2.0", path = "./linera-witty-macros" }
+linera-service = { version = "0.2.0", path = "./linera-service" }
 
 counter = { path = "./examples/counter" }
 meta-counter = { path = "./examples/meta-counter" }
