--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -88,3 +88,7 @@ path = "src/server.rs"
 [[bin]]
 name = "linera-proxy"
 path = "src/proxy.rs"
+
+[[bin]]
+name = "linera-schema-export"
+path = "src/schema_export.rs"
