Fix flaky test: subscribe should not return before subscription starts.

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -499,6 +499,10 @@ NodeError:
         STRUCT:
           - transport: STR
     22:
+      SubscriptionFailed:
+        STRUCT:
+          - status: STR
+    23:
       MissingCertificateValue: UNIT
 Operation:
   ENUM:
