OnceCell for explorer websocket

--- a/linera-explorer/Cargo.toml
+++ b/linera-explorer/Cargo.toml
@@ -29,3 +29,4 @@ hex = { workspace = true }
 reqwest = { workspace = true }
 linera-base = { workspace = true }
 futures = { workspace = true }
+once_cell = { workspace = true }
