--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -18,8 +18,8 @@ bcs = "0.1.3"
 futures = "0.3.24"
 futures-util = "0.3.26"
 hex = "0.4.3"
-linera-sdk = { version = "0.4.0", path = "../linera-sdk" }
-linera-views = { version = "0.4.0", path = "../linera-views", default-features = false }
+linera-sdk = { path = "../linera-sdk" }
+linera-views = { path = "../linera-views", default-features = false }
 log = "0.4.20"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
