--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -56,6 +56,8 @@ tower-http = { workspace = true, features = ["cors"] }
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 comfy-table = { workspace = true }
 dirs = { workspace = true }
+kube = { workspace = true }
+k8s-openapi = { workspace = true }
 file-lock = "2.1.9"
 current_platform = "0.2.0"
 cargo_toml = "0.15.3"
