--- a/configuration/prod/validator_1.toml
+++ b/configuration/prod/validator_1.toml
@@ -1,5 +1,5 @@
 server_config_path = "server_1.json"
-host = "validator-1"
+host = "34.151.215.158"
 port = 9100
 internal_host = "validator-1"
 internal_port = 10100
