--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2021"
 default = ["macros"]
 macros = ["linera-witty-macros"]
 test = []
+wasmer = []
 
 [dependencies]
 either = { workspace = true }
