Create a `Wasmer` type
Implement the `Runtime` trait for it.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -14,13 +14,14 @@ edition = "2021"
 default = ["macros"]
 macros = ["linera-witty-macros"]
 test = []
-wasmer = []
+wasmer = ["dep:wasmer"]
 
 [dependencies]
 either = { workspace = true }
 frunk = { workspace = true }
 linera-witty-macros = { workspace = true, optional = true }
 thiserror = { workspace = true }
+wasmer = { workspace = true, optional = true }
 
 [dev-dependencies]
 linera-witty = { workspace = true, features = ["macros", "test"] }
