--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Build example applications
       run: |
         cd examples
-        cargo build --release --target wasm32-unknown-unknown
+        cargo build --locked --release --target wasm32-unknown-unknown
     - name: Compile the workspace with the default features (test)
       run: |
         cargo test --locked --no-run
@@ -62,7 +62,7 @@ jobs:
         cargo test --locked
     - name: Run some extra execution tests with wasmtime
       run: |
-        cargo test -p linera-execution --features wasmtime
+        cargo test --locked -p linera-execution --features wasmtime
     - name: Build WASM test runner
       # use debug mode to avoid building wasmtime in release mode
       run: |
@@ -71,7 +71,7 @@ jobs:
       run: |
         cd examples
         CARGO_TARGET_WASM32_UNKNOWN_UNKNOWN_RUNNER=../target/debug/test-runner cargo test --target wasm32-unknown-unknown
-        cargo test --target x86_64-unknown-linux-gnu
+        cargo test --locked --target x86_64-unknown-linux-gnu
 
   lint:
     runs-on: ubuntu-latest-4-cores
@@ -81,7 +81,7 @@ jobs:
     - name: Build check_copyright_header script
       run: |
         cd ./scripts/check_copyright_header
-        cargo build --release
+        cargo build --locked --release
     - name: Check Copyright headers
       run: >
         find linera-* -name '*.rs' -a -not -wholename '*/target/*' -print0
@@ -133,7 +133,7 @@ jobs:
         cargo clippy --all-targets --all-features --tests --locked
     - name: Run cargo doc
       run: |
-        RUSTDOCFLAGS='-D warnings' cargo doc --all-features
+        RUSTDOCFLAGS='-D warnings' cargo doc --locked --all-features
     - name: Run cargo check-all-features
       run: |
         cargo check-all-features --all-targets
