Add round leader PRNG to multi-owner chain manager.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,8 @@ prost = "0.11"
 quote = "1.0"
 rand = "0.8.5"
 rand07 = { package = "rand", version = "0.7.3" }
+rand_chacha = "0.3.1"
+rand_distr = "0.4.3"
 reqwest = "0.11.14"
 rocksdb = "0.19.0"
 serde = { version = "1.0.152", features = ["derive"] }
