--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+heck = { workspace = true }
 proc-macro-error = { workspace = true }
 proc-macro2 = { workspace = true }
 quote = { workspace = true }
