--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -23,3 +23,4 @@ thiserror = { workspace = true }
 
 [dev-dependencies]
 linera-witty = { workspace = true, features = ["macros", "test"] }
+test-case = { workspace = true }
