Add some helper Wasm modules for testing
Some simple Wasm modules that will be used during some integration
tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
         "linera-views",
         "linera-views-derive",
         "linera-witty",
+        "linera-witty/test-modules",
         "linera-witty-macros",
         "linera-explorer",
 ]
