Add a `wasmtime` feature to `linera-witty`
Prepare to add support for Wasmtime in an optional manner.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -15,6 +15,7 @@ default = ["macros"]
 macros = ["linera-witty-macros"]
 test = []
 wasmer = ["dep:wasmer", "wasmer-vm"]
+wasmtime = ["dep:wasmtime"]
 
 [dependencies]
 either = { workspace = true }
