Add support for Wasmer in Witty (#945)
* Add a `wasmer` feature to `linera-witty`

Prepare to add support for Wasmer in an optional manner.

* Create a `Wasmer` type

Implement the `Runtime` trait for it.

* Create an `InstanceSlot` helper type

A type to make it easier to handle a Wasmer guest instance while it is
being initialized.

* Create a type to implement `Instance` for Wasmer

Share the actual `wasmer::Instance` type with reentrant calls.

* Create an `InstanceBuilder` helper type

A type to help with the construction of an `EntrypointInstance`.

* Convert between flat layout and Wasmer result type

Add a trait to help with the implementation of `InstanceWithFunction`
for Wasmer instance types.

* Convert between flat layout and Wasmer parameters

Add a trait to help with the implementation of `InstanceWithFunction`
for Wasmer instance types.

* Implement `InstanceWithFunction` for Wasmer type

Allow calling imported functions using Wasmer.

* Implement `InstanceWithMemory` for Wasmer types

Allow loading and storing `WitType`s in the memory of Wasmer guest
instances.

* Add an `Instance` implementation for reentrancy

Allow the type that exported host functions receive to be able to call
imported guest functions reentrantly.

* Add some helper Wasm modules for testing

Some simple Wasm modules that will be used during some integration
tests.

* Test importing guest functions using Wasmer

Reuse the integration tests for `wit_import` using a Wasmer instance.

* Run the Witty integration tests with Wasmer in CI

Build the test modules and run the integration tests with the `wasmer`
feature enabled.

* Improve documentation of WIT flat limits

Include the name of the constant from the specification, to improve
searchability and describe how it's handled in Witty.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -14,12 +14,15 @@ edition = "2021"
 default = ["macros"]
 macros = ["linera-witty-macros"]
 test = []
+wasmer = ["dep:wasmer", "wasmer-vm"]
 
 [dependencies]
 either = { workspace = true }
 frunk = { workspace = true }
 linera-witty-macros = { workspace = true, optional = true }
 thiserror = { workspace = true }
+wasmer = { workspace = true, optional = true }
+wasmer-vm = { workspace = true, optional = true }
 
 [dev-dependencies]
 linera-witty = { workspace = true, features = ["macros", "test"] }
