Add support for Wasmtime in Witty (#947)
* Add a `wasmtime` feature to `linera-witty`

Prepare to add support for Wasmtime in an optional manner.

* Create a `Wasmtime` type

Implement the `Runtime` trait for it.

* Create a type to implement `Instance` for Wasmtime

Keep the `Store` together with the actual guest `Instance`.

* Convert between flat layout and Wasmtime results

Add a trait to help with the implementation of `InstanceWithFunction`
for Wasmtime instance types.

* Convert between flat layout and Wasmtime params.

Add a trait to help with the implementation of `InstanceWithFunction`
for Wasmtime instance types.

* Impl. `InstanceWithFunction` for Wasmtime types

Allow calling imported functions using Wasmtime.

* Implement `InstanceWithMemory` for Wasmtime types

Allow loading and storing `WitType`s in the memory of Wasmtime guest
instances.

* Add an `Instance` implementation for reentrancy

Allow the type that exported host functions receive to be able to call
imported guest functions reentrantly.

* Test importing guest functions using Wasmer

Reuse the integration tests for `wit_import` using a Wasmer instance.

* Run Witty integration tests with Wasmtime in CI

Run the same integration tests with Wasmer and Wasmtime.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -15,14 +15,17 @@ default = ["macros"]
 macros = ["linera-witty-macros"]
 test = []
 wasmer = ["dep:wasmer", "wasmer-vm"]
+wasmtime = ["dep:wasmtime", "anyhow"]
 
 [dependencies]
+anyhow = { workspace = true, optional = true }
 either = { workspace = true }
 frunk = { workspace = true }
 linera-witty-macros = { workspace = true, optional = true }
 thiserror = { workspace = true }
 wasmer = { workspace = true, optional = true }
 wasmer-vm = { workspace = true, optional = true }
+wasmtime = { workspace = true, optional = true }
 
 [dev-dependencies]
 linera-witty = { workspace = true, features = ["macros", "test"] }
