--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,7 +111,7 @@ wasmtime = "1.0"
 wit-bindgen-guest-rust = { version = "0.2.0", package = "linera-wit-bindgen-guest-rust" }
 wit-bindgen-host-wasmer-rust = { version = "0.2.0", package = "linera-wit-bindgen-host-wasmer-rust" }
 wit-bindgen-host-wasmtime-rust = { version = "0.2.0", package = "linera-wit-bindgen-host-wasmtime-rust" }
-
+lazy_static = "1.4"
 linera-base = { version = "0.3.0", path = "./linera-base" }
 linera-chain = { version = "0.3.0", path = "./linera-chain" }
 linera-core = { version = "0.3.0", path = "./linera-core", default-features = false }
