Creating AMM example

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -8,6 +8,7 @@ members = [
         "matching-engine",
         "reentrant-counter",
         "social",
+        "amm",
 ]
 
 [workspace.dependencies]
@@ -25,10 +26,13 @@ serde_json = "1.0.93"
 thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
 webassembly-test = "0.1.0"
+approx = "0.5.1"
 
 counter = { path = "./counter" }
 crowd-funding = { path = "./crowd-funding" }
 fungible = { path = "./fungible" }
+amm = { path = "./amm" }
+matching-engine = { path = "./matching-engine" }
 
 [profile.release]
 debug = true
