--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,6 +133,7 @@ fungible = { path = "./examples/fungible" }
 crowd-funding = { path = "./examples/crowd-funding" }
 matching-engine = { path = "./examples/matching-engine" }
 social = { path = "./examples/social" }
+amm = { path = "./examples/amm" }
 
 [profile.release]
 debug = true
