--- a/examples/amm/Cargo.toml
+++ b/examples/amm/Cargo.toml
@@ -15,7 +15,8 @@ linera-views = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
-approx = { workspace = true }
+num-bigint = { workspace = true }
+num-traits = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
