--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -30,6 +30,7 @@ log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 linera-base = { workspace = true }
+linera-sdk-derive = { workspace = true }
 linera-views = { workspace = true }
 wit-bindgen-guest-rust = { workspace = true }
 
