Add Wasmer support for `wit_export`
Generate code to export host functions to guest Wasm instances using
Wasmer.

--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -13,6 +13,9 @@ edition = "2021"
 [lib]
 proc-macro = true
 
+[features]
+wasmer = []
+
 [dependencies]
 heck = { workspace = true }
 proc-macro-error = { workspace = true }
