--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 [features]
 default = ["macros"]
 macros = ["linera-witty-macros"]
-test = []
+test = ["linera-witty-macros?/mock-instance"]
 wasmer = ["dep:wasmer", "linera-witty-macros?/wasmer", "wasmer-vm"]
 wasmtime = ["dep:wasmtime", "anyhow", "linera-witty-macros?/wasmtime"]
 
