Add `wit_export` attribute macro to export host functions to Wasm modules (#955)
* Export `wit_import` macro from Witty

Remove the requirement to add a direct dependency to
`linera-witty-macros`.

* Create an `ExportTo` helper trait

The trait that the `wit_export` attribute macro will implement,
registering host functions as exports to a guest Wasm instance.

* Create an `ExportFunction` trait

Allows runtimes to determine how host functions are exported to guest
Wasm instances.

* Represent different ways to return host values

Create a `ResultStorage` trait in order to represent how a host
function's output needs to be sent to the guest Wasm module.

* Implement how guest instances see host functions

Create a `GuestInterface` trait to help map how a flattened host
function's signature maps to how a guest Wasm instance interfaces with
the host function.

* Create an `ExportedFunctionInterface` helper trait

Use the `GuestInterface` and `ResultStorage` traits in a single trait
that can be used to determine the interface to an exported function from
the host to the guest Wasm instance.

* Add Wasmer support for exporting host functions

Implement `ExportFunction` for the function signatures supported by
Wasmer.

* Add Wasmtime support for exporting host functions

Implement `ExportFunction` for the function signatures supported by
Wasmtime.

* Extract information from a function to export

Collect the necessary pieces to be used in the code generation for
exported functions.

* Add a `wit_export` attribute procedural macro

The macro will implement `ExportTo` to different Wasm runtime-dependent
types, depending on which feature flags are enabled. For now no runtimes
are supported.

* Add Wasmer support for `wit_export`

Generate code to export host functions to guest Wasm instances using
Wasmer.

* Add Wasmtime support for `wit_export`

Generate code to export host functions to guest Wasm instances using

--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -13,6 +13,11 @@ edition = "2021"
 [lib]
 proc-macro = true
 
+[features]
+mock-instance = []
+wasmer = []
+wasmtime = []
+
 [dependencies]
 heck = { workspace = true }
 proc-macro-error = { workspace = true }
