--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -5,7 +5,7 @@ description = "A library mapping complex data structures onto a key-value store,
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-views/latest/linera_views/"
 license = "Apache-2.0"
 edition = "2021"
