--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -5,7 +5,7 @@ description = "Base definitions, including cryptography, used by the Linera prot
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-base/latest/linera_base/"
 license = "Apache-2.0"
 edition = "2021"
