--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -5,7 +5,7 @@ description = "The core Linera protocol, including client and server logic, node
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-core/latest/linera_core/"
 license = "Apache-2.0"
 edition = "2021"
