--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -5,7 +5,7 @@ description = "Persistent data and the corresponding logics used by the Linera p
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-execution/latest/linera_execution/"
 license = "Apache-2.0"
 edition = "2021"
