--- a/linera-rpc/Cargo.toml
+++ b/linera-rpc/Cargo.toml
@@ -5,7 +5,7 @@ description = "RPC schemas and networking library for the Linera protocol."
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-rpc/latest/linera_rpc/"
 license = "Apache-2.0"
 edition = "2021"
