--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -5,7 +5,7 @@ description = "Library to support developping Linera applications in Rust."
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-sdk/latest/linera_sdk/"
 license = "Apache-2.0"
 edition = "2021"
