--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -5,7 +5,7 @@ description = "Executable for clients (aka CLI wallets), proxy (aka validator fr
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-service/latest/linera_service/"
 license = "Apache-2.0"
 edition = "2021"
