--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -5,7 +5,7 @@ description = "Procedural macros for generation of WIT compatible host code from
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-witty-macros/latest/linera_witty_macros/"
 license = "Apache-2.0"
 edition = "2021"
