--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -5,7 +5,7 @@ description = "Generation of WIT compatible host code from Rust code"
 authors = ["Linera <contact@linera.io>"]
 readme = "README.md"
 repository = "https://github.com/linera-io/linera-protocol"
-homepage = "https://linera.io"
+homepage = "https://linera.dev"
 documentation = "https://docs.rs/linera-witty/latest/linera_witty/"
 license = "Apache-2.0"
 edition = "2021"
