Detect if an exported host function is reentrant
Check if it has a first parameter with a generic type for receiving the
caller instance.

--- a/linera-witty-macros/Cargo.toml
+++ b/linera-witty-macros/Cargo.toml
@@ -14,9 +14,9 @@ edition = "2021"
 proc-macro = true
 
 [features]
-mock-instance = []
-wasmer = []
-wasmtime = []
+mock-instance = ["syn/extra-traits"]
+wasmer = ["syn/extra-traits"]
+wasmtime = ["syn/extra-traits"]
 
 [dependencies]
 heck = { workspace = true }
