Test reentrant functions using a mock instance
Ensure that the exported host functions can call the guest Wasm
instance.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -30,3 +30,4 @@ wasmtime = { workspace = true, optional = true }
 [dev-dependencies]
 linera-witty = { workspace = true, features = ["macros", "test"] }
 test-case = { workspace = true }
+tracing = { workspace = true }
