--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -22,7 +22,6 @@ db_timings = []
 metrics = ["dep:hex", "dep:metrics"]
 
 [dependencies]
-lazy_static = { workspace = true }
 static_assertions = { workspace = true }
 async-lock = { workspace = true }
 async-trait = { workspace = true }
@@ -40,6 +39,7 @@ linked-hash-map = { workspace = true }
 tempfile = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+once_cell = { workspace = true }
 tokio = { workspace = true, features = ["rt", "sync"] }
 anyhow = { workspace = true, optional = true }
 tracing = { workspace = true }
