Test accesing a guest's global state reentrantly
Check that a reentrant call back to the guest uses the same internal
state from when the guest called the host.

--- a/linera-witty/test-modules/Cargo.toml
+++ b/linera-witty/test-modules/Cargo.toml
@@ -56,5 +56,9 @@ path = "src/reentrancy/setters.rs"
 name = "reentrancy-operations"
 path = "src/reentrancy/operations.rs"
 
+[[bin]]
+name = "reentrancy-global-state"
+path = "src/reentrancy/global_state.rs"
+
 [dependencies]
 wit-bindgen = { version = "0.7.0", features = ["macros"] }
