Add reentrancy support to Witty (#960)
* Allow using instance traits without moving types

Prepare to allow using the instance types as callers inside reentrant
functions.

* Detect if an exported host function is reentrant

Check if it has a first parameter with a generic type for receiving the
caller instance.

* Skip reentrant caller parameter in signature

Use only the WIT types in the parameters.

* Pass caller argument to reentrant functions

Make reentrant calls possible.

* Test reentrant functions using a mock instance

Ensure that the exported host functions can call the guest Wasm
instance.

* Add some test modules to test reentrancy

Import and export the same functions to allow the host to act as a proxy
in order to test reentrancy.

* Test reentrancy using Wasmer and Wasmtime

Use the reentrancy test modules to test reentrancy with real Wasm
runtimes.

* Prefix test names with `test_`

Add a verb to most test names.

* Refactor `load_test_module` to avoid repeated code

Replace the closure with a type parameter for the `ExportTo`
implementation.

* Show the failed function name in panic message

Improve debuggability of tests.

* Replace function pointer with closure

Allow some private state to be stored inside the handlers.

* Test accesing a guest's global state reentrantly

Check that a reentrant call back to the guest uses the same internal
state from when the guest called the host.

--- a/linera-witty/test-modules/Cargo.toml
+++ b/linera-witty/test-modules/Cargo.toml
@@ -40,5 +40,25 @@ path = "src/import/setters.rs"
 name = "import-operations"
 path = "src/import/operations.rs"
 
+[[bin]]
+name = "reentrancy-simple-function"
+path = "src/reentrancy/simple_function.rs"
+
+[[bin]]
+name = "reentrancy-getters"
+path = "src/reentrancy/getters.rs"
+
+[[bin]]
+name = "reentrancy-setters"
+path = "src/reentrancy/setters.rs"
+
+[[bin]]
+name = "reentrancy-operations"
+path = "src/reentrancy/operations.rs"
+
+[[bin]]
+name = "reentrancy-global-state"
+path = "src/reentrancy/global_state.rs"
+
 [dependencies]
 wit-bindgen = { version = "0.7.0", features = ["macros"] }
