--- a/.github/workflows/scylladb.yml
+++ b/.github/workflows/scylladb.yml
@@ -46,4 +46,4 @@ jobs:
         docker run --name my_scylla_container -d -p 9042:9042 scylladb/scylla
     - name: Run ScyllaDB tests
       run: |
-        cargo test --locked --features scylladb -- dynamo
+        cargo test --locked --features scylladb -- scylla
