--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -24,12 +24,14 @@ test = []
 
 [dependencies]
 async-trait = { workspace = true }
+async-graphql = { workspace = true }
 bcs = { workspace = true }
 futures = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 linera-base = { workspace = true }
+linera-sdk-derive = { workspace = true }
 linera-views = { workspace = true }
 wit-bindgen-guest-rust = { workspace = true }
 
