GraphQL common client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
         "linera-chain",
         "linera-core",
         "linera-execution",
+        "linera-graphql-client",
         "linera-indexer",
         "linera-rpc",
         "linera-sdk",
@@ -120,6 +121,7 @@ linera-base = { version = "0.4.0", path = "./linera-base" }
 linera-chain = { version = "0.4.0", path = "./linera-chain" }
 linera-core = { version = "0.4.0", path = "./linera-core", default-features = false }
 linera-execution = { version = "0.4.0", path = "./linera-execution", default-features = false }
+linera-graphql-client = { version = "0.4.0", path = "./linera-graphql-client" }
 linera-indexer = { version = "0.4.0", path = "./linera-indexer" }
 linera-rpc = { version = "0.4.0", path = "./linera-rpc" }
 linera-storage = { version = "0.4.0", path = "./linera-storage", default-features = false }
