--- a/linera-indexer/Cargo.toml
+++ b/linera-indexer/Cargo.toml
@@ -29,6 +29,7 @@ linera-base = { workspace = true }
 linera-chain = { workspace = true }
 linera-core = { workspace = true }
 linera-execution = { workspace = true }
+linera-graphql-client = { workspace = true }
 linera-views = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
