--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -8,6 +8,7 @@ members = [
         "matching-engine",
         "reentrant-counter",
         "social",
+        "amm",
 ]
 
 [workspace.dependencies]
@@ -19,16 +20,20 @@ futures-util = "0.3.26"
 hex = "0.4.3"
 linera-sdk = { version = "0.4.0", path = "../linera-sdk" }
 linera-views = { version = "0.4.0", path = "../linera-views", default-features = false }
-log = "0.4.17"
+log = "0.4.20"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 thiserror = "1.0.38"
 tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
 webassembly-test = "0.1.0"
+num-bigint = "0.4.3"
+num-traits = "0.2.16"
 
 counter = { path = "./counter" }
 crowd-funding = { path = "./crowd-funding" }
 fungible = { path = "./fungible" }
+amm = { path = "./amm" }
+matching-engine = { path = "./matching-engine" }
 
 [profile.release]
 debug = true
