--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ members = [
         "linera-chain",
         "linera-core",
         "linera-execution",
-        "linera-indexer",
-        "linera-indexer-graphql-client",
+        "linera-indexer/example",
+        "linera-indexer/graphql-client",
+        "linera-indexer/lib",
+        "linera-indexer/macro",
+        "linera-indexer/plugins",
         "linera-rpc",
         "linera-sdk",
         "linera-sdk/wasm-tests",
@@ -120,8 +123,11 @@ linera-base = { version = "0.4.0", path = "./linera-base" }
 linera-chain = { version = "0.4.0", path = "./linera-chain" }
 linera-core = { version = "0.4.0", path = "./linera-core", default-features = false }
 linera-execution = { version = "0.4.0", path = "./linera-execution", default-features = false }
-linera-indexer = { version = "0.4.0", path = "./linera-indexer" }
-linera-indexer-graphql-client = { version = "0.4.0", path = "./linera-indexer-graphql-client" }
+linera-indexer = { version = "0.4.0", path = "./linera-indexer/lib" }
+linera-indexer-example = { version = "0.4.0", path = "./linera-indexer/example" }
+linera-indexer-graphql-client = { version = "0.4.0", path = "./linera-indexer/graphql-client" }
+linera-indexer-macro = { version = "0.4.0", path = "./linera-indexer/macro" }
+linera-indexer-plugins = { version = "0.4.0", path = "./linera-indexer/plugins" }
 linera-rpc = { version = "0.4.0", path = "./linera-rpc" }
 linera-storage = { version = "0.4.0", path = "./linera-storage", default-features = false }
 linera-views = { version = "0.4.0", path = "./linera-views", default-features = false }
