--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ log = "0.4.20"
 lru = "0.9.0"
 linked-hash-map = "0.5.6"
 once_cell = "1.18.0"
+oneshot = "0.1.6"
 parse_duration = "2.1.1"
 prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
