Fix share_ownership: Don't remove keys. (#985)
* Fix share_ownership: Don't remove keys.

`ChainClient::share_ownership` should only add the new key, but never
remove existing owners.

* Add a sanity check to the single-owner chain manager.

* Rename owners to public_keys in multi owner manager.

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -238,7 +238,7 @@ ChainOwnership:
     2:
       Multi:
         STRUCT:
-          - owners:
+          - public_keys:
               MAP:
                 KEY:
                   TYPENAME: Owner
@@ -413,7 +413,7 @@ MessageId:
     - index: U32
 MultiOwnerManagerInfo:
   STRUCT:
-    - owners:
+    - public_keys:
         MAP:
           KEY:
             TYPENAME: Owner
@@ -626,6 +626,8 @@ SingleOwnerManagerInfo:
   STRUCT:
     - owner:
         TYPENAME: Owner
+    - public_key:
+        TYPENAME: PublicKey
     - pending:
         OPTION:
           TYPENAME: LiteVote
