Renamed linera-adminserviceaccount to linera-admin

--- a/kubernetes/charts-linera/templates/linera-proxy.yaml
+++ b/kubernetes/charts-linera/templates/linera-proxy.yaml
@@ -29,7 +29,7 @@ spec:
       labels:
         app: validator-1
     spec:
-      serviceAccountName: linera-adminserviceaccount
+      serviceAccountName: linera-admin
       terminationGracePeriodSeconds: 10
       containers:
         - name: linera-proxy
