--- a/kubernetes/charts-linera/templates/linera-server.yaml
+++ b/kubernetes/charts-linera/templates/linera-server.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: linera-adminserviceaccount
+  name: linera-admin
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: linera-adminserviceaccount
+  name: linera-admin
 subjects:
   - kind: ServiceAccount
-    name: linera-adminserviceaccount
+    name: linera-admin
     namespace: default
 roleRef:
   kind: ClusterRole
@@ -42,7 +42,7 @@ spec:
       labels:
         app: server-1-shard-0
     spec:
-      serviceAccountName: linera-adminserviceaccount
+      serviceAccountName: linera-admin
       terminationGracePeriodSeconds: 10
       containers:
         - name: linera-server
@@ -102,7 +102,7 @@ spec:
       labels:
         app: server-1-shard-1
     spec:
-      serviceAccountName: linera-adminserviceaccount
+      serviceAccountName: linera-admin
       terminationGracePeriodSeconds: 10
       containers:
         - name: linera-server
@@ -162,7 +162,7 @@ spec:
       labels:
         app: server-1-shard-2
     spec:
-      serviceAccountName: linera-adminserviceaccount
+      serviceAccountName: linera-admin
       terminationGracePeriodSeconds: 10
       containers:
         - name: linera-server
@@ -222,7 +222,7 @@ spec:
       labels:
         app: server-1-shard-3
     spec:
-      serviceAccountName: linera-adminserviceaccount
+      serviceAccountName: linera-admin
       terminationGracePeriodSeconds: 10
       containers:
         - name: linera-server
@@ -286,7 +286,7 @@ spec:
       labels:
         app: validator-1
     spec:
-      serviceAccountName: linera-adminserviceaccount
+      serviceAccountName: linera-admin
       terminationGracePeriodSeconds: 10
       containers:
         - name: linera-proxy
